// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing with snapshots appears when clicking the button 1`] = `
<div
  className="App"
>
  <button
    className="button"
    onClick={[Function]}
    style={
      Object {
        "fontSize": undefined,
      }
    }
  >
    Enable
  </button>
  <input
    id="name"
    type="text"
  />
  <p />
  <button
    onClick={[Function]}
  >
    Call API
  </button>
</div>
`;

exports[`testing with snapshots appears when clicking the button 2`] = `
<div
  className="App"
>
  <button
    className="button"
    onClick={[Function]}
    style={
      Object {
        "fontSize": undefined,
      }
    }
  >
    Enable
  </button>
  <div>
    enabled
  </div>
  <input
    id="name"
    type="text"
  />
  <p />
  <button
    onClick={[Function]}
  >
    Call API
  </button>
</div>
`;
